
Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

SQL result tab header marks:
  Fixed performance problem when the SQL editor contained SQLs that were longer than 8000 characters.
  For SQLs that are longer than 8000 characters marking of result tab headers is skipped.

Improved the performance of SQL result tab header marking for large SQL editor content.

SQL result tab header marks:
  The option "Compare SQLs disregarding comments, line feeds and other white spaces" did not work properly.
  The option can be found at menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

Fixed NullPointer in class NullValueColorHandler.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/46
  Excel export: The "Auto filter" option activated the auto filter for
  one extra (empty) column at the end of the Excel sheet.

Follow up to #1530: The number of a Session's finalized result tabs do not appear in SQuirreL's logs anymore
  but in the "Session garbage collection status", see button on the left of the garbage collection button.

Follow up to https://github.com/squirrel-sql-client/squirrel-sql-code/issues/46
SQL result and table export to MS-Excel files: The options to make header rows bold and centered did not
  work for MS-Excel but for Libre Office only.
  Details of the fix:
  - Apache-Poi was upgraded to version 5.3.0.
  - SQuirreL deliberately dropped dependency on Log4J in 2022. As Apache-Poi 5.3.0 directly depends
    on Log4J, SQuirreL now has a Log4J mock to make Apache-Poi 5.3.0 work.

#1530 Memory leak: SQL result tabs were not garbage collect as long as their Session was open.
  Note: When a result tab of an open Session gets garbage collected the following line appears is SQuirreL's logs:
  ...INFO ... Result tab finalized for open Session "<...>" with id=<...>
