@@ -14,3 +14,6 @@ ResultTabHeaderPrefsPanel.automatically.select.manually.by.shortcut=Note: The la
 ResultTabHeaderPrefsPanelController.result.mark.color.choose=Choose result mark color
 
 MarkResultTabHeaderMatchingCurSqlAction.tools.popup.descr=Activate result tab matching current SQL
+
+ResultTabHeaderPrefsPanel.MaxSqlLengthToCheck.label.start=To avoid SQL editor performance issues process SQLs shorter than
+ResultTabHeaderPrefsPanel.MaxSqlLengthToCheck.label.end=characters only.
