@@ -1,12 +1,5 @@
 package net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabheader;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import javax.swing.JTabbedPane;
-import javax.swing.Timer;
-
 import net.sourceforge.squirrel_sql.client.Main;
 import net.sourceforge.squirrel_sql.client.session.ISQLEntryPanel;
 import net.sourceforge.squirrel_sql.client.session.editorpaint.TextAreaPaintListener;
@@ -18,6 +11,13 @@ import net.sourceforge.squirrel_sql.fw.sql.querytokenizer.QueryTokenizePurpose;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
 import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 import org.apache.commons.lang3.StringUtils;
+
+import javax.swing.JTabbedPane;
+import javax.swing.Timer;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
 
 public class ResultTabMatchingCurrentSqlHandler
 {
@@ -33,7 +33,7 @@ public class ResultTabMatchingCurrentSqlHandler
    private Timer _paintTimer;
 
    private NormalizedSqlCompareCache _normalizedSqlCompareCache = new NormalizedSqlCompareCache();
-   private long _lastEditorSqlToLongWarningMillis = 0;
+   private long _lastEditorSqlTooLongWarningMillis = 0;
 
    public ResultTabMatchingCurrentSqlHandler(ISQLEntryPanel entryPanel, SQLResultExecutorPanel sqlExecPanel)
    {
@@ -81,18 +81,19 @@ public class ResultTabMatchingCurrentSqlHandler
       resultTabsBufList.sort(Comparator.comparingInt(rt -> rt.getIdentifier().getIntValue()));
       Collections.reverse(resultTabsBufList);
 
+      int resultTabHeaderMarkMaxSqlLengthToCheck = Main.getApplication().getSquirrelPreferences().getResultTabHeaderMarkMaxSqlLengthToCheck();
       boolean activationOfLastDone = false;
       for(IResultTab sqlResultTab : resultTabsBufList)
       {
          boolean tabMatchesSqlToBeExecuted;
 
-         if( null != sqlToBeExecuted && 8000 < sqlToBeExecuted.length() )
+         if( null != sqlToBeExecuted && resultTabHeaderMarkMaxSqlLengthToCheck < sqlToBeExecuted.length() )
          {
             // Editor-SQL to long. Will skip search for matching result tab
             long currentTimeMillis = System.currentTimeMillis();
-            if( currentTimeMillis - _lastEditorSqlToLongWarningMillis > 5000L)
+            if( currentTimeMillis - _lastEditorSqlTooLongWarningMillis > 5000L)
             {
-               _lastEditorSqlToLongWarningMillis = currentTimeMillis;
+               _lastEditorSqlTooLongWarningMillis = currentTimeMillis;
                s_log.warn("Editor SQL too long (" + sqlToBeExecuted.length()  + " chars) to perform matching result tab search without severe editor performance impact.");
             }
 
